public interface IEquipable {
    int getBonoAtaque();

    int getBonoDefensa();

    SlotEquipo getSlot();
}
