@startuml
skinparam classAttributeIconSize 0
hide circle
top to bottom direction

' === INTERFACE ===
interface IEquipable <<Interface>> {
  + getBonoAtaque() : int
  + getBonoDefensa() : int
  + getSlot() : SlotEquipo
}

' === JERARQUIA OBJETO ===
abstract class Objeto {
  - nombre : String
  - precio : int
  - peso : int
  + Objeto(nombre:String, precio:int, peso:int)
  + getNombre() : String
  + getPrecio() : int
  + getPeso() : int
  + copia() : Objeto
}

class Arma {
  - ataque : int
  + Arma(nombre:String, precio:int, peso:int, ataque:int)
  + getAtaque() : int
  + getBonoAtaque() : int
  + getBonoDefensa() : int
  + getSlot() : SlotEquipo
  + copia() : Objeto
}

class Armadura {
  - tipo : TipoArmadura
  - defensa : int
  + Armadura(nombre:String, precio:int, peso:int, tipo:TipoArmadura, defensa:int)
  + getTipo() : TipoArmadura
  + getDefensa() : int
  + getBonoAtaque() : int
  + getBonoDefensa() : int
  + getSlot() : SlotEquipo
  + copia() : Objeto
}

class Metal {
  - dureza : int
  - pureza : int
  - composicion : String
  + Metal(nombre:String, precio:int, peso:int, dureza:int, pureza:int, composicion:String)
  + getDureza() : int
  + getPureza() : int
  + getComposicion() : String
  + copia() : Objeto
}

Objeto <|-- Arma
Objeto <|-- Armadura
Objeto <|-- Metal

IEquipable <|.. Arma
IEquipable <|.. Armadura

' === INVENTARIO ===
class Inventario {
  - items : Objeto[]
  + Inventario(capacidad:int)
  + getCapacidad() : int
  + getOcupados() : int
  + hayHueco() : boolean
  + add(o:Objeto) : void
  + get(indice:int) : Objeto
  + remove(indice:int) : Objeto
  + listar() : String
}


note right of Inventario::get
  throws IndiceInvalidoException
end note

note right of Inventario::add
  throws InventarioLlenoException
end note

note right of Inventario::remove
  throws IndiceInvalidoException
end note

Inventario "1" o-- "0..*" Objeto : items

' === PERSONAJE ===
class Personaje {
  - nombre : String
  - dinero : int
  - ataqueTotal : int
  - defensaTotal : int
  - inventario : Inventario
  - equipo : IEquipable[4]
  + Personaje(nombre:String, dinero:int, capacidadInventario:int)
  + getNombre() : String
  + getDinero() : int
  + setDinero(n:int) : void
  + getAtaqueTotal() : int
  + getDefensaTotal() : int
  + getInventario() : Inventario
  + getEquipo() : IEquipable[]
  + equiparDirecto(slot:SlotEquipo, eq:IEquipable) : void
  + equiparDesdeInventario(indiceInv:int) : void
  + desequipar(slot:SlotEquipo) : void
  + desequiparTodo() : void
  + mostrarResumen() : String
  + mostrarEquipo() : String
  + mostrarInventario() : String
  - slotToIndex(slot:SlotEquipo) : int
  - recalcularStats() : void
}

note left of Personaje::desequipar
  throws IndiceInvalidoException
  throws NoEquipableException
  throws InventarioLlenoException
end note

note left of Personaje::desequiparTodo
  throws InventarioLlenoException
end note

note left of Personaje::desequiparTodo
  throws InventarioLlenoException
end note

Personaje "1" *-- "1" Inventario
Personaje "1" o-- "0..4" IEquipable : equipo

' === TIENDA ===
class Tienda {
  - nombre : String
  - catalogo : Objeto[]
  - porcentajeReventa : int
  + Tienda(nombre:String, catalogo:Objeto[], porcentajeReventa:int)
  + listarCatalogo() : String
  + comprar(p:Personaje, indiceCatalogo:int) : void
  + vender(p:Personaje, indiceInventario:int) : void
}

note right of Tienda::comprar
  throws IndiceInvalidoException
  throws DineroInsuficienteException
  throws InventarioLlenoException
end note

note right of Tienda::vender
  throws IndiceInvalidoException
end note

Tienda "1" o-- "0..*" Objeto : catalogo
Tienda ..> Personaje
Tienda -[hidden]right-> Inventario
Personaje -[hidden]right-> Inventario

' === MENU ===
class Menu {
  - sc : Scanner
  - personajes : Personaje[]
  - tienda : Tienda
  + Menu(personajes:Personaje[], tienda:Tienda)
  + run() : void
  - menuPersonaje(p:Personaje) : void
  - menuTienda(p:Personaje) : void
  - leerInt(msg:String) : int
}

Menu ..> Personaje
Menu ..> Tienda

@enduml
